Remove app packaging services text

--- a/app/client/templates/home/home.html
+++ b/app/client/templates/home/home.html
@@ -51,7 +51,7 @@
       <div class="app-market-footer">
         <div>
           <h2>Need an open source app that's not yet on the App Market?</h2>
-          <p>Learn more about <a class="trigger-ga-event" href="https://docs.sandstorm.io/en/latest/developing/">packaging apps</a> or <a class="trigger-ga-event" href="https://sandstorm.io/news/2016-12-01-sandstorm-solutions">contact us</a> about app packaging services.</p>
+          <p>Learn more about <a class="trigger-ga-event" href="https://docs.sandstorm.io/en/latest/developing/">packaging apps</a>.</p>
         </div>
       </div>
       {{/if}}
