Switch to Sandstorm-hosted Source Sans
I'm not set up to test Meteor on this device, but this should work.

--- a/app/client/stylesheets/main.scss
+++ b/app/client/stylesheets/main.scss
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600);
+@import url(https://sandstorm.io/fonts/sourcesans.css);
 @import "variables";
 
 @font-face {
